--- a/uno.html
+++ b/uno.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 
 
-    <h4>🔹 Ejercicio:
+    <h1 class="name">🔹 Ejercicio 1
       Escribe un programa que reciba un número entero positivo n
-       y devuelva la suma de todos los números del 1 hasta n.</h4>
+       y devuelva la suma de todos los números del 1 hasta n.</h1>
 
     <form>
       <input type="button" value="Incrementar" onclick="incremetar()" />
@@ -17,16 +17,11 @@
     <script>
      function sumaaa (n){
       let suma = 0;
-
-
       for ( let i = 0; i <= n; i++ ){
         suma += i;
-      
-
       }
       return suma;
      }
-
      console.log(sumaaa(8));
 
     </script>
