--- a/calculadora_basica.html
+++ b/calculadora_basica.html
@@ -13,31 +13,15 @@
 
         let num1 = Number(prompt('ingrese numero 1'))
         let num2 = Number(prompt('ingrese numero 2'))
-
         let guardar;
 
-        if (teclado ==1){
+        if (teclado == 1){
             guardar = num1 + num2;
-            alert(guardar)
-        }
+            alert (guardar)
 
-        if (teclado ==2){
-            guardar = num1 -num2;
-            alert(guardar)
-        }
-
-        if (teclado ==3){
-            guardar = num1 /num2;
-            alert(guardar)
-        }
-        if (teclado ==4){
-            guardar = num1 * num2;
-            alert(guardar)
         }else{
-            alert('numero incorrecto')
+            alert("incorrecto")
         }
-
-
 
 
 
